add correction in style css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="card d-flex flex-row">
 
-                <div class="col-10 position-relative">
+                <div class="col-10 d-flex justify-content-center position-relative">
 
                     <img class="img_main" :src="place[counter].image" alt="'photo' + place[counter].title">
                     <!-- /.img_main -->
